# vns

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  _quarto.yml  app.ipynb  app.py  bun.lockb  cargo.toml  conda-lock.yml  dashapp.py  data_cleaning.ipynb  data_exploration.ipynb  environment.yml  extract.nu  hatch.toml  index.html  main.rs  mat2pkl.py  mkdocs.yml  package.json  pixi.toml  playground.ipynb  profile.html  pupil_analysis.ipynb  pyproject.toml  pyrightconfig.json  robots.txt  ruff.toml  search.json  settings.ini  sitemap.xml  trame.py  trial_analysis.ipynb  vns.code-workspace  vns.html  vns.ipynb  vns.py  vns.qmd  vns.yaml
.devcontainer/: .zshrc  devcontainer-lock.json  devcontainer.json  install_ipc_proxy_kernel.py  ipc_proxy_kernel.py  realjs_dl.py  setup_evcxr_kernel.sh
.github/workflows/: deploy.yaml  dev.yaml  docs.yaml  test.yaml
.ipynb_checkpoints/: data_cleaning-checkpoint.ipynb  data_exploration-checkpoint.ipynb  pupil_analysis-checkpoint.ipynb  requirements-checkpoint.txt  trial_analysis-checkpoint.ipynb
_proc/: index.ipynb  nbdev.yml  viz.ipynb  vns.ipynb  xarray.ipynb
assets/: html_example.html
docs/: API.md  index.md
nbs/: .gitignore  00_core.ipynb  00_experiment.ipynb  00_session.ipynb  00_trial.ipynb  _quarto.yml  dash.qmd  index.ipynb  main.qmd  monitor.ipynb  rust.ipynb  sessions.qmd  sidebar.yml  viz.ipynb  vns.ipynb  vns.qmd  xarray.ipynb  xarray_demo.ipynb
nbs/dash_files/libs/bootstrap/: bootstrap.min.css
src/vns/: __init__.py  experiment.py  load.py  session.py  sessions.py  trials.py
src/vns/assets/: profile_report.html
tests/: conftest.py  test_mat_to_vaex.py  test_results.py  test_sessions.py  test_trials.py
viz/: animation.html
vns/: __init__.py  _modidx.py  app.py  core.py  dashapp.py  dashapp_target.py  experiment.py  generate_profile_report.py  session.py  trial.py
