[project]
name = "vns"
version = "0.1.0"
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
authors = [
  { name = "Ty Schlichenmeyer", email = "t.schlic@wustl.edu" },
]
requires-python = ">=3.12"
description = ""
dependencies = [
    "dagster>=1.6.11",
    "shiny>=0.8.1",
    "shinywidgets>=0.3.1",
    "matplotlib>=3.8.3",
    "np>=1.0.2",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "pandera[polars,mypy]>=0.19.0b0",
    "plotly>=5.20.0",
    "scipy>=1.12.0",
    "xarray>=2024.2.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.3",
    "pydantic>=2.6.4",
    "polars>=0.20.15",
    "pyarrow>=15.0.1",
    "patito>=0.6.1",
]

[tool]
rye = { dev-dependencies = [
    "dagster-webserver>=1.6.9",
    "icecream>=2.1.3",
    "dask[distributed]>=2024.3.1",
] }

[tool.ruff]
ignore = [
    "ANN101",
    "ANN201",
    "ANN204",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "S101",
]
extend-include = ["*.ipynb"]
fix = true
select = ["ALL"]

[tool.mypy]
plugins = "pandera.mypy"

[tool.pyright]
python.pythonPath = ".venv/bin/python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
