[project]
name = "vns"
version = "0.1.0"
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
authors = [
  { name = "Ty Schlichenmeyer", email = "t.schlic@wustl.edu" },
]
requires-python = ">=3.12"
description = ""
dependencies = [
    "shinywidgets>=0.3.1",
    "matplotlib>=3.8.3",
    "pandera[polars]>=0.19.0b0",
    "plotly>=5.20.0",
    "scipy>=1.12.0",
    "xarray>=2024.2.0",
    "jupyter>=1.0.0",
]

[tool.rye]
dev-dependencies = [
    "dagster-webserver>=1.6.9",
    "icecream>=2.1.3",
    "dask[dataframe,distributed]>=2024.3.1",
    "ipykernel>=6.29.3",
]

[tool.rye.scripts]
nb = "quarto preview nbs/sessions.qmd"
dag = "dagster dev"

[tool.ruff]
ignore = [
    "ANN101",
    "ANN201",
    "ANN204",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "S101",
]
extend-include = ["*.ipynb"]
fix = true

[tool.pyright]
python.pythonPath = ".venv/bin/python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "vns"