[project]
name = "vns"
version = "0.1.0"
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
authors = [
  { name = "Ty Schlichenmeyer", email = "t.schlic@wustl.edu" },
]
requires-python = ">=3.12"
description = ""
dependencies = [
    "matplotlib>=3.8.4",
    "pandera[polars]>=0.19.0b0",
    "plotly>=5.20.0",
    "scipy>=1.12.0",
    "patito>=0.6.1",
    "bokeh>=3.4.0",
    "pyarrow>=15.0.2",
    "lumen>=0.6.1",
    "intake>=2.0.4",
    "dask[complete]>=2024.4.0",
    "google-cloud-storage>=2.16.0",
    "gcsfs>=2024.3.1",
    "holoviews>=1.18.3",
    "param>=2.1.0",
    "pillow>=10.3.0",
    "panel>=1.4.0",
    "nbconvert>=7.16.3",
    "altair[all]>=5.3.0",
    "ruff>=0.3.5",
]

[tool.rye]
dev-dependencies = [
    "ipykernel>=6.29.3",
    "pytest>=8.1.1",
    "jupyter-console>=6.6.3",
    "devtools>=0.12.2",
    "watchfiles>=0.21.0",
]

[tool.rye.scripts]
dashboard = "panel serve app.py --autoreload"

[tool.ruff]
ignore = [
    "ANN101",
    "ANN201",
    "ANN204",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "S101",
]
# extend-include = ["*.ipynb"]
fix = true

[tool.pyright]
python.pythonPath = ".venv/bin/python"
exclude = ["app.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "vns"

